--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ jobs:
       - docker
     git:
       depth: false
+    install:
+      - go get -u github.com/go-bindata/go-bindata/...
     script:
       - ./build/ci/tag_code.sh
   - stage: Release
@@ -21,7 +23,7 @@ jobs:
         script: curl -sL https://git.io/goreleaser | bash
         on:
           tags: true
-          condition: ${TRAVIS_TAG} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$
+#          condition: ${TRAVIS_TAG} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$
 env:
   global:
     # Add GITHUB_TOKEN environment variable to TravisCI
