Check go-bindata changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
     if: tag IS present
     install:
       - go get -u github.com/go-bindata/go-bindata/...
+      - go generate ./...
+      - git diff pkg/service/tpl/tpl.go
     script:
       - curl -sfL https://git.io/goreleaser | sh -s -- check
     deploy:
