--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 jobs:
   include:
   - stage: Tag code
-    if: branch IN (develop, master) AND type = push
+    if: branch IN (develop, master) AND type = push AND NOT (commit_message =~ /^.*\[NPM version\].*$/)
     language: go
     go:
     - 1.14.x
@@ -28,7 +28,7 @@ jobs:
       script: curl -sL https://git.io/goreleaser | bash
       on:
         tags: true
-        condition: "${TRAVIS_TAG} =~ ^v[0-9]+\\.[0-9]+\\.[0-9]+$"
+        condition: ${TRAVIS_TAG} =~ ^v[0-9]+\\.[0-9]+\\.[0-9]+$
     - provider: npm
       email: presidium@spandigital.com
       api_key:
