--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
+.DS_Store
+.idea/
+go.sum
+out/node_modules
+out/.jekyll
+out/dist
+out/content
+dist
+node_modules
