--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       script: curl -sL https://git.io/goreleaser | bash
       on:
         tags: true
-        condition: ${TRAVIS_TAG} =~ ^v[0-9]+\\.[0-9]+\\.[0-9]+$
+        condition: "${TRAVIS_TAG} =~ ^v[0-9]+\\.[0-9]+\\.[0-9]+$"
     - provider: npm
       email: presidium@spandigital.com
       api_key:
