--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,5 +29,13 @@ changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+      - '^docs:'
+      - '^test:'
+brews:
+  - name: presidium-presidium-oapi3
+    homepage: "https://github.com/spandigital/presidium"
+    description: "Presidium is a software documentation management system for agile teams"
+    tap:
+      owner: spandigital
+      name: homebrew-tap
+    folder: Formula
