--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ jobs:
     go:
     - 1.17.x
     script:
-    - curl -sfL https://goreleaser.com/static/run | bash -s -- check
+    - curl -sfL https://git.io/goreleaser | sh -s -- check
     deploy:
     - provider: script
       skip_cleanup: true
-      script: curl -sfL https://goreleaser.com/static/run | bash
+      script: curl -sL https://git.io/goreleaser | bash
       on:
         tags: true
         condition: "${TRAVIS_TAG} =~ ^v[0-9]+\\.[0-9]+\\.[0-9]+$"
