--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ jobs:
     - 1.17.x
     git:
       depth: false
+    before_script: 
+      - chmods 555 $TMPDIR
     script:
     - make test || travis_terminate 1
   - stage: Tag code
