--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
     git:
       depth: false
     before_script: 
-      - chmods 555 $TMPDIR
+      - chmod 555 $TMPDIR
     script:
     - make test || travis_terminate 1
   - stage: Tag code
