chore: updated goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 before:
   hooks:
     - go mod tidy
@@ -41,4 +42,4 @@ brews:
     repository:
       owner: spandigital
       name: homebrew-tap
-    folder: Formula
+    directory: Formula
