Move travis NPM publish and gorelease to ci-build.yml

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,4 +42,5 @@ brews:
     repository:
       owner: spandigital
       name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
     directory: Formula
