--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,22 +4,40 @@ on:
   push:
     branches:
       - '**'
-      - dev
-      - develop   # This is actually the project's `main` branch
+    tags:
+      - 'v*'
 
 env:
-  # See https://github.blog/changelog/2024-03-07-github-actions-all-actions-will-run-on-node20-instead-of-node16-by-default/
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
+  GO111MODULE: on
 
 jobs:
   call-ci-checks:
     uses: ./.github/workflows/lint-and-format-on-push.yml
 
+  tag-code:
+    name: Tag Code
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main'
+    needs: call-ci-checks
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20.x'
+          cache: true
+      - name: Tag Code
+        if: "!contains(github.event.head_commit.message, '[NPM version]')"
+        run: ./build/ci/tag_code.sh
+
   release:
     name: Release
+    runs-on: ubuntu-latest
     needs: call-ci-checks
-    runs-on:
-      - ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
     outputs:
       version: ${{ steps.create-release.outputs.version }}
     permissions:
@@ -27,8 +45,7 @@ jobs:
       issues: write
       contents: write
     steps:
-      - id: checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Create Release
@@ -36,46 +53,55 @@ jobs:
         uses: SPANDigital/span-github-actions/.github/actions/create-release@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check Tag Format
+        run: |
+          if [[ "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Tag matches required format"
+          else
+            echo "Tag does not match required format"
+            exit 1
+          fi
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: release
+    needs: [release]
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
-      - run: echo "🎉 The ci-build was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This ci-build is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20.x'
+          cache: true
+      - name: GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+      - name: Cleanup Tags
+        if: success()
+        run: ./build/ci/tags_cleanup.sh
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev libxmlsec1 libxmlsec1-dev libxmlsec1-openssl
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-  package-and-publish:
-    name: Package and Publish
-    needs:
-      - release
-      - build
-    runs-on:
-      - ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
+  npm-publish:
+    name: NPM Package Publish to GitHub
+    runs-on: ubuntu-latest
+    needs: [ release, build ]
+    if: startsWith(github.ref, 'refs/tags/v') && needs.build.result == 'success'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Build and push multi-arch image
-        uses: SPANDigital/span-github-actions/.github/actions/build-and-publish-dockerfile@main
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          aws-region: us-east-2
-          aws-registry: 735283066345.dkr.ecr.us-east-2.amazonaws.com
-          aws-repository: spandigital/portal
-          version: ${{ needs.release.outputs.version }}
-          aws-role: ${{ secrets.AWS_GITHUB_ACTIONS_ROLE }}
+          node-version: '18'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@SPANDigital'
+      - name: Publish to GitHub Packages
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
