--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,6 +43,9 @@ brews:
       owner: spandigital
       name: homebrew-tap
     directory: Formula
-npms:
-  - name: @spandigital/presidium-oapi3
-    repository: https://npm.pkg.github.com/spandigital
+# npms configuration temporarily disabled
+# npms:
+#   - name: @spandigital/presidium-oapi3
+#     repository: 
+#       owner: spandigital
+#       name: npm-registry
