--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,11 +33,8 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
-          # Use the standard GoReleaser distribution
           distribution: goreleaser
-          # Use a specific version that supports npm (v2.8+)
-          version: v2.12.0
-          # Clean dist folder before building
+          version: latest
           args: release --clean
         env:
           # GitHub token for creating releases and uploading assets
