Fix Homebrew tap permissions by adding TAP_GITHUB_TOKEN
- Add token configuration to .goreleaser.yml for homebrew tap
- Update release workflow to use TAP_GITHUB_TOKEN environment variable
- This resolves the '403 Resource not accessible by integration' error

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,4 +42,5 @@ brews:
     repository:
       owner: spandigital
       name: homebrew-tap
+      token: "{{ .Env.TAP_GITHUB_TOKEN }}"
     directory: Formula
