--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,5 @@ jobs:
         env:
           # GitHub token for creating releases and uploading assets
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Optional: If you need to push to Homebrew tap in another repo,
-          # you'll need a Personal Access Token with repo permissions
-          # TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
+          # Personal Access Token with repo permissions for Homebrew tap
+          TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
