--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "engines": {
     "node": ">=14"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "files": [
     "bin/",
     "scripts/",
